<?xml version="1.0"?>
<package>
  <name>follow_heading</name>
  <version>0.0.0</version>
  <description>The follow_heading package</description>
 
  <maintainer email="nicholishiell@gmail.com">Nicholi Shiell</maintainer>
  <author>Nicholi Shiell</author>
  <license>FREE</license>
  <url>http://bots.cs.mun.ca/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
</package>
